tests/ternary/valid/internal_assignment.amu
main :: () -> s32 {
    flag:s32 = 1;
    b:s32 = 0;
    a:s32 = if(flag)( b = 1 )else(b = 0);
    return a + b;
}