tests/ternary/invalid/rh_assignment.amu
main :: () -> s32 {
    flag:s32 = 1;
    a:s32 = 0;
    if(flag)( a = 1 )else(a = 0);
    return a;
}